--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
   <title>jeenew_logging</title>
   <link rel="manifest" href="manifest.json">
+  <script src="js/js_library.js"></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
